# schola

./: .gitignore  Cargo.toml  README.md
solutions/week_1/arthurgousset/: Cargo.toml  README.md
solutions/week_1/arthurgousset/src/: main.rs
solutions/week_1/goblinoats/: Cargo.toml
solutions/week_1/goblinoats/src/: main.rs  rsa.rs
solutions/week_1/jackddouglas/: Cargo.toml
solutions/week_1/jackddouglas/src/: main.rs
solutions/week_2/arthurgousset/: Cargo.toml  README.md
solutions/week_2/arthurgousset/src/: main.rs
solutions/week_2/goblinoats/: Cargo.toml
solutions/week_2/goblinoats/src/: main.rs
solutions/week_2/jackddouglas/: Cargo.toml
solutions/week_2/jackddouglas/src/: main.rs
solutions/week_3/arthurgousset/: Cargo.toml
solutions/week_3/arthurgousset/src/: main.rs
solutions/week_3/goblinoats/: Cargo.toml
solutions/week_3/goblinoats/src/: kzg10.rs  lib.rs  main.rs
solutions/week_3/jackddouglas/: Cargo.toml
solutions/week_3/jackddouglas/src/: main.rs
solutions/week_4/arthurgousset/: Cargo.toml
solutions/week_4/arthurgousset/src/: main.rs
solutions/week_4/goblinoats/: Cargo.toml
solutions/week_4/goblinoats/src/: aes.rs  main.rs
solutions/week_4/jackddouglas/: Cargo.toml
solutions/week_4/jackddouglas/src/: main.rs
solutions/week_5/arthurgousset/: Cargo.toml
solutions/week_5/arthurgousset/src/: main.rs
solutions/week_5/goblinoats/: Cargo.toml  Config.toml
solutions/week_5/goblinoats/src/: config.rs  main.rs  network.rs  ot.rs
solutions/week_6/arthurgousset/: Cargo.toml
solutions/week_6/arthurgousset/src/: main.rs
solutions/week_6/goblinoats/: Cargo.toml
solutions/week_6/goblinoats/src/: main.rs
solutions/week_7/arthurgousset/: Cargo.toml
solutions/week_7/arthurgousset/src/: field.rs  lib.rs  main.rs  points.rs  srs.rs
solutions/week_7/arthurgousset/tests/: points_tests.rs  srs_tests.rs
solutions/week_7/goblinoats/: Cargo.toml
solutions/week_7/goblinoats/src/: circuit.rs  curve.rs  extension.rs  field.rs  gpt.rs  lib.rs  main.rs  poynomial.rs  proof.rs  srs.rs
