[workspace]

resolver = "2"

members = [
  "solutions/week_1/arthurgousset",
  "solutions/week_4/goblinoats",
  "solutions/week_2/arthurgousset",
  "solutions/week_3/arthurgousset",
  "solutions/week_3/jackddouglas",
  "solutions/week_4/arthurgousset",
  "solutions/week_4/jackddouglas",
  "solutions/week_5/arthurgousset",
  "solutions/week_5/goblinoats",
  "solutions/week_6/arthurgousset", 
  "solutions/week_6/goblinoats", 
  "solutions/week_7/arthurgousset",
]
