[package]
name = "goblinoats"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "^0.4.0"
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-poly = {version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false }
rand = "0.8.5"
