[package]
name = "goblinoats-ot"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
num-bigint = { version = "^0.4.6", features = ["rand", "serde"] }
num-traits = "0.2.19"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
num-bigint-dig = { version = "0.8.4", features = ["serde"] }
config = "0.13"
url = "2.2"
